--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="styles/nav.css" />
     <link rel="stylesheet" href="styles/header.css" />
+    <link rel="stylesheet" href="styles/new-tweet.css">
 
     <!-- Path to layout and nav files -->
     <link rel="stylesheet" href="styles/layout.css" />
@@ -45,6 +46,7 @@
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
+    <script src="/scripts/composer-char-counter.js"></script>
   </head>
 
   <body>
@@ -69,10 +71,11 @@
     <!-- Page-specific (main) content here -->
     <main class="container">
     <form>
-      <textarea name="text" rows="1" placeholder="What are you humming about"></textarea>
+      <label>What are you humming about?</label>
+      <textarea id="input" name="text" rows="2"></textarea>
       <div class="button-counter">
         <button type="submit">tweet</button>
-        <span class="counter">140</span>
+        <span class="counter" id="count">140</span>
       </div>
     </form>
     </main>
