--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,10 @@
 
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
-    <link rel="stylesheet" href="styles/nav.css" />
-    <link rel="stylesheet" href="styles/header.css" />
-    <link rel="stylesheet" href="styles/new-tweet.css">
+    <link rel="stylesheet" href="/styles/nav.css" />
+    <link rel="stylesheet" href="/styles/header.css" />
+    <link rel="stylesheet" href="/styles/new-tweet.css">
+    <link rel="stylesheet" href="/styles/tweet.css">
 
     <!-- Path to layout and nav files -->
     <link rel="stylesheet" href="styles/layout.css" />
@@ -58,7 +59,7 @@
         <i class="fa-solid fa-angles-down" style="color: #cc8800"></i>
       </div>
     </nav>
-    <header>
+    <header id="header">
       <div class='profile-picture'>
         <img src="/images/profile-hex.png" />
         <div class="center">
@@ -78,6 +79,26 @@
         <span class="counter" id="count">140</span>
       </div>
     </form>
+    <section class="tweet-container">
+      <article class="tweet">
+        <header>
+          <div class="tweet-header-left">
+            <img src="https://i.imgur.com/73hZDYK.png" alt="avatar"/>
+            <span>Newton</span>
+          </div>
+          <p class="tweet-header-right">@SirIsaac</p>
+        </header>
+        <p>If I have seen further it is by standing on the shoulders of giants</p>
+        <footer>
+          <span>10 days ago</span>
+          <div class="icon-container">
+            <i class="fa-solid fa-flag"></i>
+            <i class="fa-solid fa-retweet"></i>
+            <i class="fa-solid fa-heart"></i>
+          </div>
+        </footer>
+      </article>
+    </section>
     </main>
   </body>
 </html>
