--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,8 @@
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js" integrity="sha512-SVDh1zH5N9ChofSlNAK43lcNS7lWze6DTVx1JCXH1Tmno+0/1jMpdbR8YDgDUfcUrPp1xyE53G42GFrcM0CMVg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
     <script src="/scripts/composer-char-counter.js"></script>
@@ -79,25 +80,7 @@
         <span class="counter" id="count">140</span>
       </div>
     </form>
-    <section class="tweet-container">
-      <article class="tweet">
-        <header>
-          <div class="tweet-header-left">
-            <img src="https://i.imgur.com/73hZDYK.png" alt="avatar"/>
-            <span>Newton</span>
-          </div>
-          <p class="tweet-header-right">@SirIsaac</p>
-        </header>
-        <p>If I have seen further it is by standing on the shoulders of giants</p>
-        <footer>
-          <span>10 days ago</span>
-          <div class="icon-container">
-            <i class="fa-solid fa-flag"></i>
-            <i class="fa-solid fa-retweet"></i>
-            <i class="fa-solid fa-heart"></i>
-          </div>
-        </footer>
-      </article>
+    <section class="tweet-container" id="tweets-container">
     </section>
     </main>
   </body>
