error message implemented

--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,8 @@
       </div>
     </header>
     <!-- Page-specific (main) content here -->
+    <div class="error-container">
+    </div>
     <main class="container">
     <form>
       <label>What are you humming about?</label>
