--- a/public/index.html
+++ b/public/index.html
@@ -1,89 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Meta Information -->
-    <title>Tweeter - Home Page</title>
 
-    <!-- External CSS -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bungee&display=swap"
-      rel="stylesheet"
-    />
+<head>
+  <!-- Meta Information -->
+  <title>Tweeter - Home Page</title>
 
-    <!-- App CSS -->
-    <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/nav.css" />
-    <link rel="stylesheet" href="/styles/header.css" />
-    <link rel="stylesheet" href="/styles/new-tweet.css">
-    <link rel="stylesheet" href="/styles/tweet.css">
+  <!-- External CSS -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet" />
 
-    <!-- Path to layout and nav files -->
-    <link rel="stylesheet" href="styles/layout.css" />
-    <link rel="stylesheet" href="styles/nav.css" />
+  <!-- App CSS -->
+  <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/nav.css" />
+  <link rel="stylesheet" href="/styles/header.css" />
+  <link rel="stylesheet" href="/styles/new-tweet.css">
+  <link rel="stylesheet" href="/styles/tweet.css">
 
-    <!-- Link to font-awesome-->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+  <!-- Path to layout and nav files -->
+  <link rel="stylesheet" href="styles/layout.css" />
+  <link rel="stylesheet" href="styles/nav.css" />
 
-    <!-- External CSS-->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-      type="text/css"
-    />
+  <!-- Link to font-awesome-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <!-- App CSS-->
-    <link rel="stylesheet" herf="/styles/layout.css" type="text/css" />
+  <!-- External CSS-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    type="text/css" />
 
-    <!-- External JS -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js" integrity="sha512-SVDh1zH5N9ChofSlNAK43lcNS7lWze6DTVx1JCXH1Tmno+0/1jMpdbR8YDgDUfcUrPp1xyE53G42GFrcM0CMVg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    
-    <!-- App JS -->
-    <script type="text/javascript" src="/scripts/client.js"></script>
-    <script src="/scripts/composer-char-counter.js"></script>
-  </head>
+  <!-- App CSS-->
+  <link rel="stylesheet" herf="/styles/layout.css" type="text/css" />
 
-  <body>
-    <!-- Top nav bar (fixed) -->
-    <nav>
-      <span class="navclass">tweeter</span>
-      <div class="right-align">
-        <p><b>Write</b> a new tweet</p>
-        <i class="fa-solid fa-angles-down" style="color: #cc8800"></i>
-      </div>
-    </nav>
+  <!-- External JS -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js"
+    integrity="sha512-SVDh1zH5N9ChofSlNAK43lcNS7lWze6DTVx1JCXH1Tmno+0/1jMpdbR8YDgDUfcUrPp1xyE53G42GFrcM0CMVg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+  <!-- App JS -->
+  <script type="text/javascript" src="/scripts/client.js"></script>
+  <script src="/scripts/composer-char-counter.js"></script>
+</head>
+
+<body>
+  <!-- Top nav bar (fixed) -->
+  <nav>
+    <span class="navclass">tweeter</span>
+    <div class="right-align">
+      <p><b>Write</b> a new tweet</p>
+      <i class="fa-solid fa-angles-down" style="color: red"></i>
+    </div>
+  </nav>
+  <div class="body-container">
     <header id="header">
       <div class='profile-picture'>
         <img src="/images/profile-hex.png" />
         <div class="center">
-      </div>
-      <br />
-      <div>
-        <p class="username" style="color: #fff"><b>Shyamal</b>Ghosh</p>
-      </div>
+        </div>
+        <br />
+        <div>
+          <p class="username" style="color: #fff"><b>Shyamal</b>Ghosh</p>
+        </div>
     </header>
-    <!-- Page-specific (main) content here -->
-    <div class="error-container">
-    </div>
     <main class="container">
-    <form>
-      <label>What are you humming about?</label>
-      <textarea id="input" name="text" rows="2"></textarea>
-      <div class="button-counter">
-        <button type="submit">tweet</button>
-        <span class="counter" id="count">140</span>
+      <div class="error-container">
       </div>
-    </form>
-    <section class="tweet-container" id="tweets-container">
-    </section>
+      <form>
+        <label>What are you humming about?</label>
+        <textarea id="input" name="text" rows="2"></textarea>
+        <div class="button-counter">
+          <button type="submit">tweet</button>
+          <span class="counter" id="count">140</span>
+        </div>
+      </form>
+      <section class="tweet-container" id="tweets-container">
+      </section>
     </main>
-  </body>
+  </div>
+  <!-- Page-specific (main) content here -->
+
+</body>
 </html>
